[project]
name = "poke-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pettingzoo>=1.25.0",
    "sb3-contrib>=2.7.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "tf-slim>=1.1.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
